--- a/search.html
+++ b/search.html
@@ -2,10 +2,9 @@
 
 <!-- <form class="flexrow" action="https://blah.com/jobs/search%3Fss%3D1" method="GET" target="_blank">
 <input type="text" name="searchKeyword" placeholder="Job Keyword (e.g. Sales)">
-<input type="text" name="searchLocation" placeholder="Location (e.g. Oakland)">
+<input type="tet" name="searchLocation" placeholder="Location (e.g. Oakland)">
 
 </form>
-
 <div class="submit">Submit</div> -->
 
 <!-- My Fix -->
